# bmad-method-flow

./: .gitignore  Cargo.toml  README.md  install.sh  uninstall.sh
_bmad-output/implementation-artifacts/: 22-1-implement-github-rest-api-client-for-issue-operations.md  22-2-sync-github-issues-to-plugin-board-as-tasks.md  22-3-filter-issues-by-label-and-milestone-for-selective-sync.md  22-4-auto-link-prs-to-source-github-issues.md  23-1-monitor-pr-review-status-via-github-api.md  23-2-parse-review-comments-into-actionable-fix-descriptions.md  23-3-create-coding-pr-fix-workflow-template.md  23-4-integrate-pr-feedback-loop-into-auto-dev-cycle.md  24-1-implement-worktree-ownership-tracking.md  24-2-auto-cleanup-worktrees-on-completion-and-merge.md  epic-1-6-retro-2026-03-21.md  (+11 more)
config/: auto-loop.yaml  config.yaml  pulse.yaml
dashboard/: display-customizations.json  manifest.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json
docs/: architecture.md  development-guide.md  index.md  plugin-coding-pack.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
plugin-packs/: coding.toml
src/: agent_registry.rs  auto_dev.rs  board.rs  board_client.rs  board_store.rs  config_injector.rs  executor.rs  github_client.rs  github_sync.rs  lib.rs  main.rs  pack.rs  plugin_bridge.rs  pulse_api.rs  session.rs  test_parser.rs  tool_provider.rs  util.rs  validator.rs  workspace.rs  worktree_tracker.rs
tests/: board_client_integration.rs  e2e_auto_dev_tests.rs  e2e_executor_tests.rs  e2e_tests.rs  registration_tests.rs  sync_board_store.rs
(+111 files in other folders)
