[package]
name = "plugin-coding-pack"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Jack"]
description = "Pulse meta-plugin: coding pack orchestrator — validates, loads, and coordinates bmad-method + provider-claude-code + git-worktree plugins"

[lib]
name = "plugin_coding_pack"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "plugin-coding-pack"
path = "src/main.rs"

[dependencies]
pulse-plugin-sdk = { path = "../../pulse/crates/pulse-plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = "0.53"

[dev-dependencies]
pulse-plugin-test = { path = "../../pulse/crates/pulse-plugin-test", features = ["wasm-harness"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tempfile = "3"
